--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -132,3 +132,22 @@ body {
   background: #fff;
   min-height: 460px;
 }
+
+/**********************
+		abilities
+**********************/
+span
+{
+  font-size:10px;
+  float:right;
+  background-color:#F4F7F9;
+  border-radius:10px;
+  padding:3px 8px;
+  color:#84919B;
+}
+.lower-case
+{
+  color:#84919B;
+  font-size:12px;
+  text-align:center;
+}
